--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  /* max-width: 1280px; */ /* Comentado para no interferir con el layout del ensayo */
+  /* margin: 0 auto; */ /* Comentado para no interferir con el layout del ensayo */
+  /* padding: 2rem; */ /* Comentado para no interferir con el layout del ensayo */
+  /* text-align: center; */ /* Comentado para no interferir con el layout del ensayo */
 }
 
 .logo {
